# early-bird-badge

./: .env.example  .gitignore  Cargo.toml  DEMO_GUIDE.md  DESIGN.md  LICENSE  README.md  dfx.json  next.config.js  package-lock.json  package.json  setup.sh
app/: layout.tsx  page.tsx
app/badges/: page.tsx
app/badges/[id]/: page.tsx
app/pricing/: page.tsx
backend/: Cargo.toml
backend/canister/early_bird_badge/src/: lib.rs
backend/src/declarations/early_bird_badge/: early_bird_badge.did  early_bird_badge.did.d.ts  early_bird_badge.did.js  index.d.ts  index.js
canister/early_bird_badge/: Cargo.toml  README.md
canister/early_bird_badge/src/: lib.rs
components/: BadgeCard.tsx  badge-card.tsx  header.tsx
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/badges/: page.tsx
frontend/app/badges/[id]/: page.tsx
frontend/components/: BadgeCard.tsx
frontend/lib/: agent.ts
lib/: agent.ts
src/declarations/early_bird_badge_assets/: index.d.ts  index.js
